# nextdns-mcp

./: .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  Dockerfile  Dockerfile.alpine  LICENSE  PROJECT_RESTART_SUMMARY.md  README.md  TEST_SUMMARY.md  TODO.md  catalog.yaml  dump_schema.py  gateway-config.yaml  nextdns-openapi.yaml  pyproject.toml  tasks.md  test_boolean_param.py  test_extra_fields.py  test_extra_fields_live.py  test_patch.py  test_server.py
.claude/: settings.local.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: auto-release.yml  dependabot-auto-merge.yml  docker-publish.yml  e2e-mcp-gateway.yml  unit-tests.yml  version-bumper.yml  version-guard.yml  weekly-maintenance.yml
docs/: E2E_AUTHENTICATION_SUCCESS.md  E2E_GITHUB_ACTIONS_GUIDE.md  README.md  configuration.md  docker-mcp-gateway.md  faq.md  getting-started.md  index.md  safety.md  tools.md  troubleshooting.md  usage.md
scripts/: README.md  ai_agent_e2e_prompt.md  commit_e2e_workflow.ps1  commit_e2e_workflow.sh  gateway_e2e_run.ps1  gateway_e2e_run.sh  run_all_tools.ps1  run_all_tools.sh  validate_schema.py
src/nextdns_mcp/: __init__.py  client.py  coercion.py  config.py  nextdns-openapi.yaml  openapi.py  server.py  usage.py  utils.py
src/nextdns_mcp/tools/: __init__.py  analytics.py  doh.py  lists.py  logs.py  plots.py  profiles.py  rewrites.py  settings.py
temp-report/: tools_report.jsonl
tests/: QUICK_REFERENCE.md  conftest.py  test_coverage_fixtures.py
tests/integration/: README.md  run_integration_tests.py  test_live_access_control.py  test_live_api.py  test_server_init.py
tests/unit/: test_access_control.py  test_access_controlled_client.py  test_client.py  test_config.py  test_config_access.py  test_config_api.py  test_config_constants.py  test_config_errors.py  test_config_file.py  test_config_integration.py  test_config_profiles.py  test_doh_lookup.py  test_grouped_tools.py  test_mcp_run_options.py  test_middleware.py  test_openapi_loader.py  test_plotting.py  test_server_additional_coverage.py  test_server_functions.py  test_tool_wrappers.py  test_transport_config.py  test_type_coercion.py  test_validate_schema.py
