[project]
name = "nextdns-mcp"
version = "3.1.1"
description = "NextDNS MCP Server - Model Context Protocol server for NextDNS API built with FastMCP"
authors = [{name = "NextDNS MCP Contributors"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp==3.4.3",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    "matplotlib>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.1.0",
    "black>=25.9.0",
    "ruff>=0.15.10",
    "isort>=7.0.0",
    "mypy>=1.20.1",
    "types-pyyaml>=6.0.12.20250915",
    "xenon",
    "coverage",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nextdns_mcp"]

[tool.hatch.build]
include = [
    "src/nextdns_mcp/*.yaml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.isort]
profile = "black"
line_length = 120

[tool.uv]
exclude-newer = "2026-07-06T23:59:59Z"
